# FUN

./: .gitignore  README.md  linuxbrew.sh
A_Ubuntu_vi_lesson/: vilesson.txt
A_Useful_Scripts/: Convert_ODT_to_PDF.sh  Deploy_ASGARD.sh  Deploy_Valor_OCS.sh  open_terminals.sh
A_fun_with_point_clouds/read_point_cloud/: README  pcd_read.cpp
A_fun_with_point_clouds/read_point_cloud_then_visualize/: CMakeLists.txt  pcd_read_then_visualize.cpp
A_fun_with_point_clouds/visualize_pcd/: README
A_practice/: .gitignore
A_practice/fizzbuzz/: a.out
A_practice/remove_duplicates/: remove_duplicates.cpp
A_practice/reverse_string/: reverse_string.cpp
A_sample_kalman_filter/kalmanfilteropencv/: CMakeLists.txt  README.txt  kalmanfilteropencv.cpp
fizzbuzz/: fizzbuzz.cpp
patches/COMPARISON/: Mypatch.diff  patch.diff  patch.txt
patches/FIXED_URG_PATCH_/: THOR-Fixes_HOKUYO_make-Issue1.patch  urg_serial_linux.c
scripts/: Typecool.sh  coolbeans.sh
